# mugenify

./: .gitignore  Makefile  pyproject.toml  readme.md
src/: .cache  app.py  main.py
src/db/: db.py
src/util/: util.py
src/utils/: utils.py
