[tool.poetry]
name = "gemini-contest-api"
version = "0.1.0"
description = ""
authors = ["Romail Khan <romail.khan2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
spotipy = "^2.24.0"
fastapi-sessions = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
