[tool.poetry]
name = "gemini-contest-api"
version = "0.1.0"
description = ""
authors = ["Romail Khan <romail.khan2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
