[tool.poetry]
name = "gemini-contest-api"
version = "0.1.0"
description = ""
authors = ["Romail Khan <romail.khan2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
spotipy = "^2.24.0"
ruff = "^0.4.9"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
uuid6 = "^2024.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
